--- a/KnjiznicaApp/KnjiznicaApp.csproj
+++ b/KnjiznicaApp/KnjiznicaApp.csproj
@@ -50,6 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KnjiznicaDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KnjiznicaDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="KnjiznicaDataSet4.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -106,6 +111,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="KnjiznicaDataSet.xsc">
+      <DependentUpon>KnjiznicaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="KnjiznicaDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>KnjiznicaDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="KnjiznicaDataSet.xss">
+      <DependentUpon>KnjiznicaDataSet.xsd</DependentUpon>
+    </None>
     <None Include="KnjiznicaDataSet4.xsc">
       <DependentUpon>KnjiznicaDataSet4.xsd</DependentUpon>
     </None>
