--- a/KnjiznicaApp/KnjiznicaApp.csproj
+++ b/KnjiznicaApp/KnjiznicaApp.csproj
@@ -90,6 +90,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ClanForm.resx">
       <DependentUpon>ClanForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UrediKatalogForm.resx">
       <DependentUpon>UrediKatalogForm.cs</DependentUpon>
@@ -119,6 +120,7 @@
     </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Knjiga.datasource" />
+    <None Include="Properties\DataSources\KopijaKnjige.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
