--- a/KnjiznicaApp/KnjiznicaApp.csproj
+++ b/KnjiznicaApp/KnjiznicaApp.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClanPosudenoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ClanPosudenoForm.Designer.cs">
+      <DependentUpon>ClanPosudenoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="KnjiznicaDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -91,6 +97,9 @@
     <EmbeddedResource Include="ClanForm.resx">
       <DependentUpon>ClanForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ClanPosudenoForm.resx">
+      <DependentUpon>ClanPosudenoForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UrediKatalogForm.resx">
       <DependentUpon>UrediKatalogForm.cs</DependentUpon>
